Fix the visibility issue of the `SignUp` component's title
The original title is invisible in light theme.

--- a/frontend/pages/Auth/SignUp/SignUp.module.css
+++ b/frontend/pages/Auth/SignUp/SignUp.module.css
@@ -3,7 +3,6 @@
 .title {
     font-family: Greycliff CF, var(--mantine-font-family);
     font-weight: 900;
-    color: var(--mantine-color-dark-9);
 }
 
 .container {
